Agregar seguridad al proyecto + buildeo

--- a/Demo-API-REST-USUARIOS/src/main/resources/application.properties
+++ b/Demo-API-REST-USUARIOS/src/main/resources/application.properties
@@ -28,3 +28,8 @@ spring.mail.default-encoding=UTF-8
 # Swagger UI
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/docs
+
+
+# JWT
+jwt.secret=ClaveSuperSecreta-TantoQueLaOlvide
+jwt.expiration=3600000   # 1 hora en milisegundos
